--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     </style>
   </head>
   <body class="manrope-font">
-    <header class="container mx-auto ">
+    <!-- navber content start -->
+    <header class="container mx-auto">
       <div class="navbar bg-base-100">
         <div class="navbar-start">
           <div class="dropdown">
@@ -61,11 +62,16 @@
               <li><a>Contact Us</a></li>
             </ul>
           </div>
-          <a class="text-3xl font-bold"><i class="fa-solid fa-arrow-right bg-black text-white -rotate-45 rounded-full p-2"></i>Rinterio</a>
+          <a class="text-3xl font-bold"
+            ><i
+              class="fa-solid fa-arrow-right bg-black text-white -rotate-45 rounded-full p-2"
+            ></i
+            >Rinterio</a
+          >
         </div>
         <div class="navbar-center hidden lg:flex">
           <ul class="menu menu-horizontal px-1">
-            <li><a class=" text-gray-700 font-bold">Home</a></li>
+            <li><a class="text-gray-700 font-bold">Home</a></li>
             <li><a class="text-gray-700">Portfolio</a></li>
             <li><a class="text-gray-700">Services</a></li>
             <li><a class="text-gray-700">Blogs</a></li>
@@ -73,11 +79,68 @@
           </ul>
         </div>
         <div class="navbar-end space-x-4">
-            <i class="fa-solid fa-magnifying-glass"></i>
-            <i class="fa-solid fa-cart-shopping rounded-full"></i>
-          <a class="btn bg-green-400 font-bold rounded-full">Book Consult <i class="fa-solid fa-arrow-right bg-black text-white -rotate-45 p-2 rounded-full"></i></a>
+          <i class="fa-solid fa-magnifying-glass"></i>
+          <i class="fa-solid fa-cart-shopping rounded-full"></i>
+          <a class="btn bg-green-400 font-bold rounded-full"
+            >Book Consult
+            <i
+              class="fa-solid fa-arrow-right bg-black text-white -rotate-45 p-2 rounded-full"
+            ></i
+          ></a>
         </div>
       </div>
     </header>
+    <!-- navber content ends -->
+    <main>
+      <section class="container mx-auto text-center">
+        <div class="flex justify-center items-center">
+          <img class="w-1/2" src="./assets/banner.png" alt="" />
+        </div>
+        <h1 class="text-6xl font-extrabold mb-4">
+          A barn house of this design has a <br />
+          striking appearance
+        </h1>
+        <p class="mb-8">
+          The barn house captivates with its blend of rustic charm and modern
+          sophistication, featuring weathered wood, sleek metal accents, and
+          large windows that flood the space with natural light.
+        </p>
+        <button
+          class="bg-green-300 text-gray-800 font-bold py-2 px-4 rounded-full"
+        >
+          View Details<i
+            class="fa-solid fa-arrow-right bg-black text-white -rotate-45 p-2 rounded-full"
+          ></i>
+        </button>
+      </section>
+      <!-- Works Process Section -->
+      <section class="container mx-auto px-6 py-16">
+        <div class="text-center">
+            <button class="btn">How we works</button>
+            <h3 class="text-3xl font-bold">Our Works Process</h3>
+            <p>Here where the magic starts! With a clear strategy, we bring fresh <br> ideas to life. Our designers take the lead,</p>
+        </div>
+        <div class="grid grid-cols-1 md:grid-cols-4 gap-6">
+            <div class="p-6 bg-[#E7C1D3] rounded-md">
+                <img src="./assets/concept.png" alt="">
+                <h4 class="text-xl font-bold">Concept</h4>
+                <p>Bringing your ideas to life starts here!</p>
+            </div>
+            <div class="p-6 bg-[#EFDA6E] rounded-md">
+                <img src="./assets/flow-chart.png" alt="">
+                <h4 class="text-xl font-bold">Design Proces</h4>
+                <p>Bringing your ideas to life starts here!</p>
+            </div>  <div class="p-6 bg-[#A4DAC3] rounded-md">
+                <img src="./assets/vision.png" alt="">
+                <h4 class="text-xl font-bold">Supervision</h4>
+                <p>Bringing your ideas to life starts here!</p>
+            </div>  <div class="p-6 bg-[#77AAEA] rounded-md">
+                <img src="./assets/budget-planning.png" alt="">
+                <h4 class="text-xl font-bold">Budget Planning</h4>
+                <p>Budget planning is about transparency and efficiency</p>
+            </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
